...
                              color: secondaryHighlight,
                            ),
                          ),
                          Expanded(
                            child: TextFormField(
                              autovalidate: shouldValidate,
                              key: Key('name'),
                              textCapitalization: TextCapitalization.sentences,
                              style: TextStyle(
                                color: primaryHighlight,
                              ),
                              controller: eventNameController,
                              decoration: const InputDecoration(
...
                              color: secondaryHighlight,
                            ),
                          ),
                          Expanded(
                            child: TextFormField(
                              autovalidate: shouldValidate,
                              key: Key('location'),
                              textCapitalization: TextCapitalization.sentences,
                              style: TextStyle(
                                color: primaryHighlight,
                              ),
                              controller: locationController,
                              decoration: const InputDecoration(
...
                                labelStyle: TextStyle(
                                  color: secondaryHighlight,
                                ),
                              ),
                              validator: (value) {
                                if (value.isEmpty) {
                                  return 'Please enter a location';
                                }
                                return null;
                              },
                            ),
                          ),
                        ],
...
                              Icons.short_text,
                              color: secondaryHighlight,
                            ),
                          ),
                          Expanded(
                            child: TextFormField(
                              key: Key('description'),
                              textCapitalization: TextCapitalization.sentences,
                              style: TextStyle(
                                color: primaryHighlight,
                              ),
                              controller: descriptionController,
                              decoration: const InputDecoration(
...
                              color: secondaryHighlight,
                            ),
                          ),
                          if (isOngoing)
                            Expanded(
                              child: TextFormField(
                                key: Key('duration'),
                                textCapitalization:
                                    TextCapitalization.sentences,
                                style: TextStyle(
                                  color: primaryHighlight,
                                ),
                                controller: durationController,
...
                                    style: TextStyle(
                                      color: secondaryHighlight,
                                      fontSize: 16,
                                      fontWeight: FontWeight.normal,
                                    ),
                                  ),
                                  key: Key("Upload"),
                                  onPressed: () async {
                                    File img = await uploadImagePopup(context);
                                    setState(() {
                                      if (img != null) _image = img;
                                    });
                                  },
...
