...
                    child: Column(
                      children: <Widget>[
                        Padding(
                          padding: EdgeInsets.only(
                              right: 15, bottom: 10, top: 10, left: 10),
                          child: Switch(
                              key: Key("Notification Toggle"),
                              activeColor: primaryHighlight,
                              value: toggle,
                              onChanged: (value) {
                                setState(() {
                                  toggle = !toggle;
                                });
...
                            right: 15,
                            bottom: 10,
                            top: 10,
                            left: 10,
                          ),
                          child: RaisedButton(
                            key: Key('logoutButton'),
                            color: primaryHighlight,
                            child: Text(
                              User.currentUser != null ? 'LOGOUT' : 'LOGIN',
                              style: TextStyle(color: secondaryBackground),
                            ),
                            onPressed: () => logout(context),
...
