...
  }
}

/// Filters the current Finesses by status/type
Future<List<Finesse>> applyFilters(responseJson) async {
  final SharedPreferences prefs = await SharedPreferences.getInstance();
  final bool activeFilter = prefs.getBool('activeFilter') ?? true;
  final bool typeFilter = prefs.getBool('typeFilter') ?? true;
  List<Finesse> filteredFinesses = List<Finesse>.from(responseJson);

  if (activeFilter == false) {
    filteredFinesses.removeWhere((fin) =>
        !fin.isActive || fin.markedInactive.contains(User.currentUser.email));
  }
...
